made a text to speech register and login

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,5 +13,5 @@
     <ion-textarea raw="5" [(ngModel)]="text"></ion-textarea>
   </ion-item>
   
-  <button clear ionbutton (click)="saytext()">Text To Speech</button>
+  <button clear ionbutton (click)="sayText()">Text To Speech</button>
 </ion-content>
